crates/plotnik-lib/tests/03-analyze/duplicates/duplicate_tagged_alternation_labels.txt
Q = [A: (a) @x  A: (b) @y]
==== diagnostics ====
error: branch label `A` is already used in this alternation
 --> query.ptk:1:17
  |
1 | Q = [A: (a) @x  A: (b) @y]
  |                 ^
  |
help: each branch label must be unique within an alternation
==== symbols ====
Q
